--- a/stylesAdd.css
+++ b/stylesAdd.css
@@ -32,7 +32,6 @@
     margin-top: 5%;
     display: flex;
     flex-direction: column;
-    border: 2px solid red;
     padding: 0px 5%;
 }
 
@@ -71,4 +70,13 @@
     color: #333;
     border: 1px solid #333;
     padding: 1%
+}
+
+#botao {
+    background-color: #98D1F1;
+    border: 1px solid rgba(51, 51, 51, 0.356);
+    padding: 1% 4%;
+    margin-top: 2%;
+    border-radius: 8px 8px 8px 8px;
+    font-weight: bolder;
 }
